--- a/index.html
+++ b/index.html
@@ -7,21 +7,21 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Montserrat" rel="stylesheet"> 
-        <link href="./css/styles.css">
+        <link href="/css/styles.css">
         <!-- <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">  -->
     </head>
     <body style="width: 100%; border: 0px; margin: 0px; ">
         <header style="width: 80vw; margin: auto; display: flex; flex-direction: row; justify-content: space-between;">
-            <h1 style="font-family: 'Monsterrat', sans-serif;">TIM TRAPS CATS</h2>
-            <ul style="display: flex; flex-direction: row; height: 0px; padding: 0em 0 4em 0;">
+            <h1 style="font-family: 'Monsterrat', sans-serif;"><a id="titleHomeLink" href="/index.html">TIM TRAPS CATS</a></h2>
+            <ul style="display: flex; flex-direction: row; height: 0px; width: 20%; padding: 0em 0 4em 0; list-style: none; justify-content: space-around;">
                 <li>
-                    Home
+                    <a href="/index.html">Home</a>
                 </li>
                 <li>
-                    Report A Cat
+                    <a href="/reporatcat.html">Report A Cat</a>
                 </li>
                 <li>
-                    Want Barn Cats?
+                    <a href="/wantbarncats.html">Want Barn Cats?</a>
                 </li>
             </ul>
         </header>
