--- a/index.html
+++ b/index.html
@@ -13,20 +13,20 @@
     <body style="width: 100%; border: 0px; margin: 0px; ">
         <header style="width: 80vw; margin: auto; display: flex; flex-direction: row; justify-content: space-between;">
             <h1 style="font-family: 'Monsterrat', sans-serif;"><a id="titleHomeLink" href="/index.html">TIM TRAPS CATS</a></h2>
-            <ul style="display: flex; flex-direction: row; height: 0px; width: 20%; padding: 0em 0 4em 0; list-style: none; justify-content: space-around;">
-                <li>
-                    <a href="/index.html">Home</a>
+            <ul style="display: flex; flex-direction: row; height: 0px; padding: 0em 0 4em 0; list-style: none; justify-content: space-around;">
+                <li style="width: 100%;">
+                    <a href="/index">Home</a>
                 </li>
                 <li>
-                    <a href="/reporatcat.html">Report A Cat</a>
+                    <a href="/reportacat">Report A Cat</a>
                 </li>
                 <li>
-                    <a href="/wantbarncats.html">Want Barn Cats?</a>
+                    <a href="/wantbarncats">Want Barn Cats?</a>
                 </li>
             </ul>
         </header>
         <div id="body" style="width: 100%; border: 0px; margin: 0px; display: flex;">
-            <div id="comingSoonCatImg   " style="background-image: linear-gradient(rgba(0, 0, 0, 0.37) 0%, rgba(0, 0, 0, 0.37) 100%), url(./media/img/homepagecat.webp); background-repeat: no-repeat; background-position: center; background-size: cover; width: 100%; height: 0px; padding: 40vh 0 40vh 0; margin: 0px;
+            <div id="comingSoonCatImg" style="background-image: linear-gradient(rgba(0, 0, 0, 0.37) 0%, rgba(0, 0, 0, 0.37) 100%), url(./media/img/homepagecat.webp); background-repeat: no-repeat; background-position: center; background-size: cover; width: 100%; height: 0px; padding: 40vh 0 40vh 0; margin: 0px;
             " >
             <div style="text-align: center; font-size: 48pt; color: white;">
                 Launching Soon
