--- a/volunteerwaiver.html
+++ b/volunteerwaiver.html
@@ -14,13 +14,13 @@
             <h1 style="font-family: 'Monsterrat', sans-serif;"><a href="/index.html">TIM TRAPS CATS</a></h2>
             <ul style="display: flex; flex-direction: row; height: 0px; padding: 0em 0 4em 0;">
                 <li>
-                    <a href="/index.html">Home</a>
+                    <a href="/index">Home</a>
                 </li>
                 <li>
-                    <a href="/reporatcat.html">Report A Cat</a>
+                    <a href="/reportacat">Report A Cat</a>
                 </li>
                 <li>
-                    <a href="/wantbarncats.html">Want Barn Cats?</a>
+                    <a href="/wantbarncats">Want Barn Cats?</a>
                 </li>
             </ul>
         </header>
