fix forgotten link lol

--- a/wantbarncats.html
+++ b/wantbarncats.html
@@ -17,7 +17,7 @@
                     <a href="/index.html">Home</a>
                 </li>
                 <li>
-                    <a href="/reporatcat.html">Report A Cat</a>
+                    <a href="/reportacat.html">Report A Cat</a>
                 </li>
                 <li>
                     <a href="/wantbarncats.html">Want Barn Cats?</a>
