--- a/volunteerform.html
+++ b/volunteerform.html
@@ -24,9 +24,16 @@
                 </li>
             </ul>
         </header>
-        <div id="body" style="width: 80%; border: 0px; margin: auto; display: flex; justify-content: space-around;">
+        <div id="body" style="width: 80%; border: 0px; margin: auto; display: flex; justify-content: space-around; flex-direction: column;">
+            <script type="text/javascript" src="https://form.jotform.com/jsform/211277735215050"></script>
             <div style="width: 90%; ">
-                <script type="text/javascript" src="https://form.jotform.com/jsform/211225996212049"></script>
+            </div>
+            <div id="footer" style="margin-top: 2em; color: #3338;">
+                <hr style="width: 80vw; border: 1px solid #8888;">
+                <div style="display: flex; justify-content: space-around;">
+                    <div style="font-family: sans-serif;">Copyright © 2021 Tim Traps Cats - All Rights Reserved.</div>
+                    <div style="font-family: sans-serif;">built by chairdev</div>
+                </div>
             </div>
     </body>
 </html>
