--- a/wantbarncats.html
+++ b/wantbarncats.html
@@ -29,5 +29,12 @@
             <div style="width: 10%; ">
                 test
             </div>
+            <div id="footer" style="margin-top: 2em; color: #3338;">
+                <hr style="width: 80vw; border: 1px solid #8888;">
+                <div style="display: flex; justify-content: space-around;">
+                    <div style="font-family: sans-serif;">Copyright © 2021 Tim Traps Cats - All Rights Reserved.</div>
+                    <div style="font-family: sans-serif;">built by chairdev</div>
+                </div>
+            </div>
     </body>
 </html>
