--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="author" content="chairdev">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="preconnect" href="https://fonts.gstatic.com">
-        <link href="https://fonts.googleapis.com/css2?family=Montserrat" rel="stylesheet"> 
+        <link href="https://fonts.googleapis.com/css2?family=Montserrat" rel="stylesheet">
         <link href="/css/styles.css" rel="stylesheet">
         <!-- <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">  -->
     </head>
@@ -17,11 +17,11 @@
                 <li>
                     <a href="/index">Home</a>
                 </li>
-                <li class="headerulverticallines">&vert;</li>
+                <li class="headerulverticallines"></li>
                 <li>
                     <a href="/reportacat">Report A Cat</a>
                 </li>
-                <li class="headerulverticallines">&vert;</li>
+                <li class="headerulverticallines"></li>
                 <li>
                     <a href="/wantbarncats">Want Barn Cats?</a>
                 </li>
