--- a/reportacat.html
+++ b/reportacat.html
@@ -7,18 +7,21 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Montserrat" rel="stylesheet"> 
+        <link href="/css/styles.css" rel="stylesheet">
         <!-- <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">  -->
     </head>
     <body style="width: 100%; border: 0px; margin: 0px; ">
-        <header style="width: 80vw; margin: auto; display: flex; flex-direction: row; justify-content: space-between;">
-            <h1 style="font-family: 'Monsterrat', sans-serif;"><a href="/index.html">TIM TRAPS CATS</a></h2>
-            <ul style="display: flex; flex-direction: row; height: 0px; padding: 0em 0 4em 0;">
+        <header style="">
+            <h1 style=""><a id="titleHomeLink" href="/index.html">TIM TRAPS CATS</a></h2>
+            <ul style="">
                 <li>
                     <a href="/index">Home</a>
                 </li>
+                <li class="headerulverticallines"></li>
                 <li>
                     <a href="/reportacat">Report A Cat</a>
                 </li>
+                <li class="headerulverticallines"></li>
                 <li>
                     <a href="/wantbarncats">Want Barn Cats?</a>
                 </li>
