--- a/reportacat.html
+++ b/reportacat.html
@@ -25,6 +25,10 @@
                 <li>
                     <a href="/wantbarncats">Want Barn Cats?</a>
                 </li>
+                <li class="headerulverticallines"></li>
+                <li>
+                    <a href="/volunteerform">Volunteering</a>
+                </li>
             </ul>
         </header>
         <div id="body" style="width: 100%; border: 0px; margin: auto; display: flex; flex-direction: column; justify-content: space-around;">
