--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
         <link href="https://fonts.googleapis.com/css2?family=Montserrat" rel="stylesheet">
         <link href="/css/styles.css" rel="stylesheet">
         <!-- <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">  -->
+        <style>
+        </style>
     </head>
     <body style="width: 100%; border: 0px; margin: 0px; ">
         <header style="">
@@ -34,7 +36,7 @@
         <div id="body" style="width: 100%; border: 0px; margin: 0px; display: flex;">
             <div id="comingSoonCatImg" style="background-image: linear-gradient(rgba(0, 0, 0, 0.37) 0%, rgba(0, 0, 0, 0.37) 100%), url(./media/img/homepagecat.webp); background-repeat: no-repeat; background-position: center; background-size: cover; width: 100%; height: 0px; padding: 40vh 0 40vh 0; margin: 0px;
             " >
-            <div style="text-align: center; font-size: 32pt; color: white;">
+            <div id="catimgtext" style="">
                 Launching Soon
             </div>
                 <hr style="width: 70vw; color: white; border: 1px solid white">
