--- a/index.html
+++ b/index.html
@@ -13,25 +13,27 @@
         </style>
     </head>
     <body style="width: 100%; border: 0px; margin: 0px; ">
-        <header style="">
-            <h1 style=""><a id="titleHomeLink" href="/index.html">TIM TRAPS CATS</a></h2>
-            <ul style="">
-                <li>
-                    <a href="/index">Home</a>
-                </li>
-                <li class="headerulverticallines"></li>
-                <li>
-                    <a href="/reportacat">Report A Cat</a>
-                </li>
-                <li class="headerulverticallines"></li>
-                <li>
-                    <a href="/wantbarncats">Want Barn Cats?</a>
-                </li>
-                <li class="headerulverticallines"></li>
-                <li>
-                    <a href="/volunteerform">Volunteering</a>
-                </li>
-            </ul>
+        <header>
+            <h1><a id="titleHomeLink" href="/index.html">TIM TRAPS CATS</a></h2>
+            <div>
+                <ul id="headernav">
+                    <li>
+                        <a href="/index">Home</a>
+                    </li>
+                    <li class="headerulverticallines"></li>
+                    <li>
+                        <a href="/reportacat">Report A Cat</a>
+                    </li>
+                    <li class="headerulverticallines"></li>
+                    <li>
+                        <a href="/wantbarncats">Want Barn Cats?</a>
+                    </li>
+                    <li class="headerulverticallines"></li>
+                    <li>
+                        <a href="/volunteerform">Volunteering</a>
+                    </li>
+                </ul>
+            </div>
         </header>
         <div id="body" style="width: 100%; border: 0px; margin: 0px; display: flex;">
             <div id="comingSoonCatImg" style="background-image: linear-gradient(rgba(0, 0, 0, 0.37) 0%, rgba(0, 0, 0, 0.37) 100%), url(./media/img/homepagecat.webp); background-repeat: no-repeat; background-position: center; background-size: cover; width: 100%; height: 0px; padding: 40vh 0 40vh 0; margin: 0px;
