--- a/wantbarncats.html
+++ b/wantbarncats.html
@@ -11,37 +11,44 @@
         <!-- <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">  -->
     </head>
     <body style="width: 100%; border: 0px; margin: 0px; ">
-        <header style="">
-            <h1 style=""><a id="titleHomeLink" href="/index.html">TIM TRAPS CATS</a></h2>
-            <ul style="">
-                <li>
-                    <a href="/index">Home</a>
-                </li>
-                <li class="headerulverticallines"></li>
-                <li>
-                    <a href="/reportacat">Report A Cat</a>
-                </li>
-                <li class="headerulverticallines"></li>
-                <li>
-                    <a href="/wantbarncats">Want Barn Cats?</a>
-                </li>
-                <li class="headerulverticallines"></li>
-                <li>
-                    <a href="/volunteerform">Volunteering</a>
-                </li>
-            </ul>
+        <header>
+            <h1><a id="titleHomeLink" href="/index.html">TIM TRAPS CATS</a></h2>
+            <div>
+                <ul id="headernav">
+                    <li>
+                        <a href="/index">Home</a>
+                    </li>
+                    <li class="headerulverticallines"></li>
+                    <li>
+                        <a href="/reportacat">Report A Cat</a>
+                    </li>
+                    <li class="headerulverticallines"></li>
+                    <li>
+                        <a href="/wantbarncats">Want Barn Cats?</a>
+                    </li>
+                    <li class="headerulverticallines"></li>
+                    <li>
+                        <a href="/volunteerform">Volunteering</a>
+                    </li>
+                </ul>
+            </div>
         </header>
-        <div id="body" style="width: 80%; border: 0px; margin: auto; display: flex; justify-content: space-around;">
-            <div id="comingSoonCatImg" style="background-image: linear-gradient(rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0) 100%), url(./media/img/barncatimg.webp); background-repeat: no-repeat; background-position: center; background-size: cover; width: 45%; height: 0px; padding: 40vh 0 4vh 0; margin: 0px;" ></div>
-            <div style="width: 10%; ">
-                test
-            </div>
-            <div id="footer" style="margin-top: 2em; color: #3338;">
-                <hr style="width: 80vw; border: 1px solid #8888;">
-                <div style="display: flex; justify-content: space-around;">
-                    <div style="font-family: sans-serif;">Copyright © 2021 Tim Traps Cats - All Rights Reserved.</div>
-                    <div style="font-family: sans-serif;">built by chairdev</div>
+        <div id="body" style="width: 100%; border: 0px; margin: auto; display: flex; flex-direction: column; justify-content: space-around;">
+            <div id="comingSoonCatImg" style="background-image: linear-gradient(rgba(0, 0, 0, 0.37) 0%, rgba(0, 0, 0, 0.37) 100%), url(./media/img/barncatimg.webp); background-repeat: no-repeat; background-position: center; background-size: cover; width: 100%; height: 0px; padding: 0vh 0 70vh 0; margin: 0px;" >
+                <!-- <div style="text-align: center; font-size: 32pt; color: white;">
+                    Report A Cat
                 </div>
+                    <hr style="width: 70vw; color: white; border: 1px solid white"> -->
+        <div style="">
+            <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfO3hEJ-FXysjNPANTdg7palqEpI8g7g6yvJbAYMLX3IbR4YQ/viewform?embedded=true" style="width: 100%; height: 70vh;" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+        </div>
+        </div>
+        <div id="footer" style="margin-top: 2em; color: #3338;">
+            <hr style="width: 80vw; border: 1px solid #8888;">
+            <div style="display: flex; justify-content: space-around;">
+                <div style="font-family: sans-serif;">Copyright © 2021 Tim Traps Cats - All Rights Reserved.</div>
+                <div style="font-family: sans-serif;">built by chairdev</div>
             </div>
+        </div>
     </body>
 </html>
