finalization of initial forms

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <div id="comingSoonCatImg" style="background-image: linear-gradient(rgba(0, 0, 0, 0.37) 0%, rgba(0, 0, 0, 0.37) 100%), url(./media/img/homepagecat.webp); background-repeat: no-repeat; background-position: center; background-size: cover; width: 100%; height: 0px; padding: 40vh 0 40vh 0; margin: 0px;
             " >
             <div id="catimgtext" style="">
-                Launching Soon
+                Tim Traps Cats
             </div>
                 <hr style="width: 70vw; color: white; border: 1px solid white">
             </div>
@@ -48,7 +48,7 @@
             <hr style="width: 80vw; border: 1px solid #8888;">
             <div style="display: flex; justify-content: space-around;">
                 <div style="font-family: sans-serif;">Copyright © 2021 Tim Traps Cats - All Rights Reserved.</div>
-                <div style="font-family: sans-serif;">built by chairdev</div>
+                <div style="font-family: sans-serif;">built by <a href="zodywoolsey.github.io">chairdev</a></div>
             </div>
         </div>
     </body>
