--- a/volunteerform.html
+++ b/volunteerform.html
@@ -11,25 +11,27 @@
         <!-- <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">  -->
     </head>
     <body style="width: 100%; border: 0px; margin: 0px; ">
-        <header style="">
-            <h1 style=""><a id="titleHomeLink" href="/index.html">TIM TRAPS CATS</a></h2>
-            <ul style="">
-                <li>
-                    <a href="/index">Home</a>
-                </li>
-                <li class="headerulverticallines"></li>
-                <li>
-                    <a href="/reportacat">Report A Cat</a>
-                </li>
-                <li class="headerulverticallines"></li>
-                <li>
-                    <a href="/wantbarncats">Want Barn Cats?</a>
-                </li>
-                <li class="headerulverticallines"></li>
-                <li>
-                    <a href="/volunteerform">Volunteering</a>
-                </li>
-            </ul>
+        <header>
+            <h1><a id="titleHomeLink" href="/index.html">TIM TRAPS CATS</a></h2>
+            <div>
+                <ul id="headernav">
+                    <li>
+                        <a href="/index">Home</a>
+                    </li>
+                    <li class="headerulverticallines"></li>
+                    <li>
+                        <a href="/reportacat">Report A Cat</a>
+                    </li>
+                    <li class="headerulverticallines"></li>
+                    <li>
+                        <a href="/wantbarncats">Want Barn Cats?</a>
+                    </li>
+                    <li class="headerulverticallines"></li>
+                    <li>
+                        <a href="/volunteerform">Volunteering</a>
+                    </li>
+                </ul>
+            </div>
         </header>
         <div id="body" style="width: 80%; border: 0px; margin: auto; display: flex; justify-content: space-around; flex-direction: column;">
             <script type="text/javascript" src="https://form.jotform.com/jsform/211277735215050"></script>
@@ -39,7 +41,7 @@
                 <hr style="width: 80vw; border: 1px solid #8888;">
                 <div style="display: flex; justify-content: space-around;">
                     <div style="font-family: sans-serif;">Copyright © 2021 Tim Traps Cats - All Rights Reserved.</div>
-                    <div style="font-family: sans-serif;">built by chairdev</div>
+                    <div style="font-family: sans-serif;">built by <a href="zodywoolsey.github.io">chairdev</a></div>
                 </div>
             </div>
     </body>
