--- a/wantbarncats.html
+++ b/wantbarncats.html
@@ -34,20 +34,15 @@
             </div>
         </header>
         <div id="body" style="width: 100%; border: 0px; margin: auto; display: flex; flex-direction: column; justify-content: space-around;">
-            <div id="comingSoonCatImg" style="background-image: linear-gradient(rgba(0, 0, 0, 0.37) 0%, rgba(0, 0, 0, 0.37) 100%), url(./media/img/barncatimg.webp); background-repeat: no-repeat; background-position: center; background-size: cover; width: 100%; height: 0px; padding: 0vh 0 70vh 0; margin: 0px;" >
-                <!-- <div style="text-align: center; font-size: 32pt; color: white;">
-                    Report A Cat
-                </div>
-                    <hr style="width: 70vw; color: white; border: 1px solid white"> -->
         <div style="">
-            <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfO3hEJ-FXysjNPANTdg7palqEpI8g7g6yvJbAYMLX3IbR4YQ/viewform?embedded=true" style="width: 100%; height: 70vh;" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+            <script type="text/javascript" src="https://form.jotform.com/jsform/211494392684060"></script>
         </div>
         </div>
         <div id="footer" style="margin-top: 2em; color: #3338;">
             <hr style="width: 80vw; border: 1px solid #8888;">
             <div style="display: flex; justify-content: space-around;">
                 <div style="font-family: sans-serif;">Copyright © 2021 Tim Traps Cats - All Rights Reserved.</div>
-                <div style="font-family: sans-serif;">built by chairdev</div>
+                <div style="font-family: sans-serif;">built by <a href="zodywoolsey.github.io">chairdev</a></div>
             </div>
         </div>
     </body>
