--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <div id="body" style="width: 100%; border: 0px; margin: 0px; display: flex;">
             <div id="comingSoonCatImg" style="background-image: linear-gradient(rgba(0, 0, 0, 0.37) 0%, rgba(0, 0, 0, 0.37) 100%), url(./media/img/homepagecat.webp); background-repeat: no-repeat; background-position: center; background-size: cover; width: 100%; height: 0px; padding: 40vh 0 40vh 0; margin: 0px;
             " >
-            <div id="catimgtext" style="">
+            <div id="catimgtext" >
                 Tim Traps Cats
             </div>
                 <hr style="width: 70vw; color: white; border: 1px solid white">
