--- a/wantbarncats.html
+++ b/wantbarncats.html
@@ -34,7 +34,7 @@
             </div>
         </header>
         <div id="body" style="width: 100%; border: 0px; margin: auto; display: flex; flex-direction: column; justify-content: space-around;">
-        <div style="">
+        <div >
             <script type="text/javascript" src="https://form.jotform.com/jsform/211494392684060"></script>
         </div>
         </div>
