--- a/donate.html
+++ b/donate.html
@@ -9,7 +9,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Montserrat" rel="stylesheet"> 
         <link href="/css/styles.css" rel="stylesheet">
         <!-- <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">  -->
-        <title>Volunteer Form</title>
+        <title>Tim Traps Cats: Donation</title>
     </head>
     <body style="width: 100%; border: 0px; margin: 0px; ">
         <header>
@@ -38,16 +38,20 @@
                 </ul>
             </div>
         </header>
-        <div id="body" style="width: 80%; border: 0px; margin: auto; display: flex; justify-content: space-around; flex-direction: column;">
-            <script type="text/javascript" src="https://form.jotform.com/jsform/211277735215050"></script>
-            <div style="width: 90%; ">
+        <div id="body" style="width: 100%; border: 0px; margin: auto; padding-top: 2em; padding-bottom: 2em; font-family: sans-serif; display: flex; flex-direction: column; justify-content: center;">
+            <h2 style="margin: auto;">Use PayPal&trade; to donate to Tim Traps Cats:</h2>
+            <form action="https://www.paypal.com/donate" method="post" target="_top" style="margin: auto;">
+                <input type="hidden" name="hosted_button_id" value="93TQ4XN9CTC5C" />
+                <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donate_LG.gif" border="0" name="submit" title="PayPal - The safer, easier way to pay online!" alt="Donate with PayPal button" />
+                <img alt="" border="0" src="https://www.paypal.com/en_US/i/scr/pixel.gif" width="1" height="1" />
+            </form>
+        </div>
+        <div id="footer" style="margin-top: 2em; color: #3338;">
+            <hr style="width: 80vw; border: 1px solid #8888;">
+            <div style="display: flex; justify-content: space-around;">
+                <div style="font-family: sans-serif;">Copyright © 2021 Tim Traps Cats - All Rights Reserved.</div>
+                <div style="font-family: sans-serif;">built by <a href="zodywoolsey.github.io">chairdev</a></div>
             </div>
-            <div id="footer" style="margin-top: 2em; color: #3338;">
-                <hr style="width: 80vw; border: 1px solid #8888;">
-                <div style="display: flex; justify-content: space-around;">
-                    <div style="font-family: sans-serif;">Copyright © 2021 Tim Traps Cats - All Rights Reserved.</div>
-                    <div style="font-family: sans-serif;">built by <a href="zodywoolsey.github.io">chairdev</a></div>
-                </div>
-            </div>
+        </div>
     </body>
 </html>
