--- a/index.html
+++ b/index.html
@@ -33,6 +33,10 @@
                     <li>
                         <a href="/volunteerform">Volunteering</a>
                     </li>
+                    <li class="headerulverticallines"></li>
+                    <li>
+                        <a href="/donate">Donate</a>
+                    </li>
                 </ul>
             </div>
         </header>
