--- a/wantbarncats.html
+++ b/wantbarncats.html
@@ -31,6 +31,10 @@
                     <li>
                         <a href="/volunteerform">Volunteering</a>
                     </li>
+                    <li class="headerulverticallines"></li>
+                    <li>
+                        <a href="/donate">Donate</a>
+                    </li>
                 </ul>
             </div>
         </header>
