--- a/new/volunteerform.html
+++ b/new/volunteerform.html
@@ -39,8 +39,8 @@
             </div>
         </header>
         <div id="body" style="width: 80%; border: 0px; margin: auto; display: flex; justify-content: space-around; flex-direction: column;">
-            <div style="width: 90%; ">
-                <iframe src="https://www.shelterluv.com/form/volunteer/TTC/601-volunteer-application" frameborder="0"></iframe>
+            <div style="">
+                <iframe src="https://www.shelterluv.com/form/volunteer/TTC/601-volunteer-application" frameborder="0" style="width: 100%; height: 600px;"></iframe>
             </div>
             <div id="footer" >
                 <hr style="width: 80vw; border: 1px solid #8888;">
