--- a/volunteerform.html
+++ b/volunteerform.html
@@ -43,8 +43,11 @@
             </div>
         </header>
         <div id="body" style="width: 80%; border: 0px; margin: auto; display: flex; justify-content: space-around; flex-direction: column;">
-            <div style="">
+            <div style="display: none;">
                 <iframe src="https://www.shelterluv.com/form/volunteer/TTC/601-volunteer-application" frameborder="0" style="width: 100%; height: 600px;"></iframe>
+            </div>
+            <div>
+                <script type="text/javascript" src="https://form.jotform.com/jsform/211277735215050"></script>
             </div>
             <div id="footer" >
                 <hr style="width: 80vw; border: 1px solid #8888;">
